--- a/ch03/ch03_1/public/index.html
+++ b/ch03/ch03_1/public/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Web site created using create-react-app" />
     <!-- Bootstrap CSS -->
     <link
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJlIm9Nao0Yz1ztcQtwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
